fix spelling, background on scroll, whitespace handling

--- a/code-128a-encoder/index.css
+++ b/code-128a-encoder/index.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+   background-color: hsl(71,88%,73%);
    background-image: linear-gradient(-45deg, hsl(71,88%,73%) 0%, hsl(120,76%,70%) 31%, hsl(188,94%,65%) 53%, hsl(190,100%,64%) 70%, hsl(248,85%,68%) 90%);
    /*height: calc(100% - 50px);*/
    min-width: 850px;
